task 20d8kmq Create Expense: Mileage expense: Select location pop up top spacing fixed

--- a/src/global.scss
+++ b/src/global.scss
@@ -402,7 +402,7 @@ ion-popover.camera-options-popover {
 
 .mat-form-field-no-padding {
   .mat-form-field-wrapper {
-    padding-top: 12px;
+    padding: 0;
   }
 }
 
